# deep_agents

./: .gitignore  README.md  multi_agent_supervisor.py  research_agent.py  research_agent_full.py  research_agent_mcp.py  research_agent_scope.py  utils.py
backend/: README.md  WORKFLOW.md  pyproject.toml
backend/src/deep_research/agents/: research.py  research_full.py  research_mcp.py  research_scope.py  supervisor.py
backend/src/deep_research/prompts/: __init__.py  brief_criteria.md  brief_hallucination.md  clarify_with_user_instructions.md  compress_research_human.md  compress_research_system.md  final_report_generation.md  lead_researcher.md  research_agent.md  research_agent_with_mcp.md  summarize_webpage.md  transform_messages_into_research_topic.md
backend/src/deep_research/utils/: common.py  logger.py
