[tool.poetry]
name = "deep-research"
version = "0.1.0"
description = "Deep Research Agents"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "deep_research", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.0"
langgraph = "^0.2.0"
langchain-openai = "^0.2.0"
tavily-python = "^0.5.0"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
typing-extensions = "^4.0.0"
langchain-mcp-adapters = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
